# CLIInterface

./: CMakeLists.txt  README.md
Code/: BaseXMLParser.h  CmdLineArgsParser.h  CmdLineInterface.h  ModuleDescriptionXMLParser.h
Testing/: .cli_sample.cpp.swp  cli_sample.cpp
